--- a/css/_vars.sass
+++ b/css/_vars.sass
@@ -23,6 +23,7 @@ $gray3:                   #DCEAFF
 $gray4:                   #bebebe
 $gray5:                   #dedede
 $gray6:                   #d9d9d9
+$gray7:                   #cbcbcb
 $red:                     #DE4747
 $text:                    #5C6E93
 $border:                  #DCEAFF
