BD-200 box-shadow-done

--- a/css/_inner_content.sass
+++ b/css/_inner_content.sass
@@ -38,9 +38,9 @@
       .cabinet-inner
         display: flex
         align-items: center
-        grid-gap: 48px
+        grid-gap: 28px
         overflow: hidden
-        padding: 26px 0
+        padding: 6px 0
         .add_cabinet_box
           min-width: 270px
           +flex_2
@@ -75,6 +75,7 @@
               margin: 0 auto
 
       .pdf-container
+        padding: 20px
         display: flex
         grid-gap: 50px
         overflow: auto hidden
