--- a/css/_responsive.sass
+++ b/css/_responsive.sass
@@ -583,7 +583,7 @@
           
           .cabinet-inner 
             grid-gap: 25px
-            align-items: flex-start
+            align-items: center
             .add_cabinet_box
               min-width: 180px
               padding: 0 10px
